--- a/WinFormCarpinteria.csproj
+++ b/WinFormCarpinteria.csproj
@@ -64,6 +64,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoDatos\AbstractDaoFactory.cs" />
+    <Compile Include="AccesoDatos\DaoFactory.cs" />
+    <Compile Include="AccesoDatos\HelperDao.cs" />
+    <Compile Include="AccesoDatos\IPresupuestoDao.cs" />
+    <Compile Include="AccesoDatos\PresupuestoDao.cs" />
     <Compile Include="Entidades\DetallePresupuesto.cs" />
     <Compile Include="Formularios\FrmConsultar.cs">
       <SubType>Form</SubType>
@@ -98,6 +103,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DSProductos.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Servicios\GestorPresupuesto.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <EmbeddedResource Include="Formularios\FrmConsultar.resx">
       <DependentUpon>FrmConsultar.cs</DependentUpon>
