--- a/WinFormCarpinteria.csproj
+++ b/WinFormCarpinteria.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AccesoDatos\AbstractDaoFactory.cs" />
     <Compile Include="AccesoDatos\DaoFactory.cs" />
     <Compile Include="AccesoDatos\HelperDao.cs" />
+    <Compile Include="AccesoDatos\IListadoPresupuestos.cs" />
     <Compile Include="AccesoDatos\IPresupuestoDao.cs" />
     <Compile Include="AccesoDatos\PresupuestoDao.cs" />
     <Compile Include="Entidades\DetallePresupuesto.cs" />
