--- a/WinFormCarpinteria.csproj
+++ b/WinFormCarpinteria.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Reportes\rptProductos.rdlc" />
     <None Include="packages.config" />
